kubernetes_manifest/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: uber-ui
spec:
  selector:
    app: uber-ui
  ports:
  - protocol: "TCP"
    port: 6000
    targetPort: 5000
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uber-ui
spec:
  selector:
    matchLabels:
      app: uber-ui
  replicas: 2
  template:
    metadata:
      labels:
        app: uber-ui
    spec:
      containers:
      - name: uber-ui
        image: 912101370089.dkr.ecr.us-east-1.amazonaws.com/devopsthehardway-ecr:latest
        ports:
        - containerPort: 5000
